--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-9.36MB/s(Youtube:不良林), server: gy.cwcsrsyby.xyz, port: 47515, type: vmess, uuid: 2a30f24e-c164-3f34-a99d-e9107655cf49, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇮🇳 印度-2.92MB/s(Youtube:不良林), server: jgwhdlb1.gaox.ml, port: 443, type: trojan, password: e05c749b-7c6b-41b8-9c71-9dcf685edf4a, sni: jgwhdlb1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇮🇳 印度-3.11MB/s(Youtube:不良林), server: jgwhdlb3.gaox.ml, port: 443, type: trojan, password: 006baa3f-4bc3-4915-b60d-c8c5dae11a11, sni: jgwhdlb3.gaox.ml, skip-cert-verify: true}
-  - {name: 未知国家-1.49MB/s(Youtube:不良林), server: us02.gogogoo.cyou, port: 443, type: vmess, uuid: db5d1aa3-908b-44d1-be0a-4e6a8d4e4cda, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /go, ws-headers: {Host: us02.gogogoo.cyou}}
-  - {name: 🇩🇪 德国-3.50MB/s(Youtube:不良林), server: 49.12.203.80, port: 40960, type: ss, cipher: aes-256-gcm, password: 6kA7b3f9Aw2508erQ3W7D4}
-  - {name: 🇺🇸 美国-4.89MB/s(Youtube:不良林), server: lsj02.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: lsj02.wangxd.life, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.42MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.51MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-5.10MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-1.26MB/s(Youtube:不良林), server: jgw2.gaox.ml, port: 443, type: trojan, password: f2117e99-9b6e-47fd-b0a9-634a0b15b998, sni: jgw2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-21.45MB/s(Youtube:不良林), server: jupiter.hk.v4.e1dns.com, port: 443, type: vmess, uuid: 4a9e6b6e-ec2c-4b89-9df6-5118fa07f1d7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-533.0KB/s(Youtube:不良林), server: ahdaeph8.com, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: ahdaeph8.com}}
+  - {name: 波兰-802.0KB/s(Youtube:不良林), server: 217.30.10.64, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
+  - {name: 🇺🇸 美国-3.62MB/s(Youtube:不良林), server: s2.upyun.online, port: 12340, type: trojan, password: c0276440-f163-4f40-a08c-78b158ce6c4f, sni: s2.upyun.online, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.08MB/s(Youtube:不良林), server: 157.230.41.220, port: 29596, type: ss, cipher: aes-256-cfb, password: e6c1cf51375c407d92d110881a825acb}
+  - {name: 🇰🇷 韩国-522.6KB/s(Youtube:不良林), server: 193.123.232.191, port: 1167, type: vmess, uuid: 840c3605-84af-498b-87e2-3f8404080345, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-2.81MB/s(Youtube:不良林), server: v2-2.godlight.xyz, port: 27000, type: vmess, uuid: 43308d27-94ec-408e-a8f6-d682cfb99ca9, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /54f634fs, ws-headers: {Host: v2-2.godlight.xyz}}
+  - {name: 🇺🇸 美国-6.39MB/s(Youtube:不良林), server: ocrb2.moonfree.top, port: 443, type: vmess, uuid: 6e9eeae6-c3d1-439e-9f7a-213fe09b2dbe, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: ocrb2.moonfree.top}}
+  - {name: 🇺🇸 美国-3.91MB/s(Youtube:不良林), server: vfly9.win, port: 443, type: vmess, uuid: 825136bb-fc0a-4f43-8307-dc2e36f27e2d, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /myblog, ws-headers: {Host: vfly9.win}}
+  - {name: 🇺🇸 美国-5.30MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-9.36MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.92MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.11MB/s(Youtube:不良林)
-      - 未知国家-1.49MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.42MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.51MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.10MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-21.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-533.0KB/s(Youtube:不良林)
+      - 波兰-802.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.08MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-522.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-9.36MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.92MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.11MB/s(Youtube:不良林)
-      - 未知国家-1.49MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.42MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.51MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.10MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-21.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-533.0KB/s(Youtube:不良林)
+      - 波兰-802.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.08MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-522.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-9.36MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.92MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.11MB/s(Youtube:不良林)
-      - 未知国家-1.49MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.42MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.51MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.10MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-21.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-533.0KB/s(Youtube:不良林)
+      - 波兰-802.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.08MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-522.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-9.36MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.92MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.11MB/s(Youtube:不良林)
-      - 未知国家-1.49MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.42MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.51MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.10MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-21.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-533.0KB/s(Youtube:不良林)
+      - 波兰-802.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.08MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-522.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-9.36MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.92MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.11MB/s(Youtube:不良林)
-      - 未知国家-1.49MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.42MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.51MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.10MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-21.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-533.0KB/s(Youtube:不良林)
+      - 波兰-802.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.08MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-522.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-9.36MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.92MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.11MB/s(Youtube:不良林)
-      - 未知国家-1.49MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.42MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.51MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.10MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-21.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-533.0KB/s(Youtube:不良林)
+      - 波兰-802.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.08MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-522.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-9.36MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.92MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.11MB/s(Youtube:不良林)
-      - 未知国家-1.49MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.42MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.51MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.10MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-21.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-533.0KB/s(Youtube:不良林)
+      - 波兰-802.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.08MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-522.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
