--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-21.45MB/s(Youtube:不良林), server: jupiter.hk.v4.e1dns.com, port: 443, type: vmess, uuid: 4a9e6b6e-ec2c-4b89-9df6-5118fa07f1d7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-533.0KB/s(Youtube:不良林), server: ahdaeph8.com, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: ahdaeph8.com}}
-  - {name: 波兰-802.0KB/s(Youtube:不良林), server: 217.30.10.64, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
-  - {name: 🇺🇸 美国-3.62MB/s(Youtube:不良林), server: s2.upyun.online, port: 12340, type: trojan, password: c0276440-f163-4f40-a08c-78b158ce6c4f, sni: s2.upyun.online, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-1.08MB/s(Youtube:不良林), server: 157.230.41.220, port: 29596, type: ss, cipher: aes-256-cfb, password: e6c1cf51375c407d92d110881a825acb}
-  - {name: 🇰🇷 韩国-522.6KB/s(Youtube:不良林), server: 193.123.232.191, port: 1167, type: vmess, uuid: 840c3605-84af-498b-87e2-3f8404080345, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-2.80MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇷🇺 俄罗斯联邦-1.30MB/s(Youtube:不良林), server: 213.183.53.208, port: 9003, type: ss, cipher: aes-256-cfb, password: JdmRK9gMEqFgs8nP}
   - {name: 🇸🇬 新加坡-2.81MB/s(Youtube:不良林), server: v2-2.godlight.xyz, port: 27000, type: vmess, uuid: 43308d27-94ec-408e-a8f6-d682cfb99ca9, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /54f634fs, ws-headers: {Host: v2-2.godlight.xyz}}
-  - {name: 🇺🇸 美国-6.39MB/s(Youtube:不良林), server: ocrb2.moonfree.top, port: 443, type: vmess, uuid: 6e9eeae6-c3d1-439e-9f7a-213fe09b2dbe, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: ocrb2.moonfree.top}}
-  - {name: 🇺🇸 美国-3.91MB/s(Youtube:不良林), server: vfly9.win, port: 443, type: vmess, uuid: 825136bb-fc0a-4f43-8307-dc2e36f27e2d, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /myblog, ws-headers: {Host: vfly9.win}}
-  - {name: 🇺🇸 美国-5.30MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-554.0KB/s(Youtube:不良林), server: ahdaeph8.com, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: ahdaeph8.com}}
+  - {name: 🇻🇳 越南-322.3KB/s(Youtube:不良林), server: hn2.aqvpn.me, port: 443, type: trojan, password: d00083c7-e3db-4707-a24d-5662912368ff, sni: hn2.aqvpn.me, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-3.63MB/s(Youtube:不良林), server: 213.183.53.208, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇺🇸 美国-2.23MB/s(Youtube:不良林), server: wireless.starspace.link, port: 443, type: trojan, password: 5LN8SGTqxk336nFg, sni: wireless.starspace.link, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.67MB/s(Youtube:不良林), server: holidays.starspace.link, port: 443, type: trojan, password: XCPKaaV8I1rmb7Ai, sni: holidays.starspace.link, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.91MB/s(Youtube:不良林), server: snacks.starspace.link, port: 443, type: trojan, password: 0lbw6RXSl7eqCYMv, sni: snacks.starspace.link, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.17MB/s(Youtube:不良林), server: views.pickaxe.sh, port: 443, type: trojan, password: XQ5jxs58ecd403l7, sni: views.pickaxe.sh, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-21.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-533.0KB/s(Youtube:不良林)
-      - 波兰-802.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.08MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-522.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.80MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.30MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-554.0KB/s(Youtube:不良林)
+      - 🇻🇳 越南-322.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-21.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-533.0KB/s(Youtube:不良林)
-      - 波兰-802.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.08MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-522.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.80MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.30MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-554.0KB/s(Youtube:不良林)
+      - 🇻🇳 越南-322.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-21.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-533.0KB/s(Youtube:不良林)
-      - 波兰-802.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.08MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-522.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.80MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.30MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-554.0KB/s(Youtube:不良林)
+      - 🇻🇳 越南-322.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-21.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-533.0KB/s(Youtube:不良林)
-      - 波兰-802.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.08MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-522.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.80MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.30MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-554.0KB/s(Youtube:不良林)
+      - 🇻🇳 越南-322.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-21.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-533.0KB/s(Youtube:不良林)
-      - 波兰-802.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.08MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-522.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.80MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.30MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-554.0KB/s(Youtube:不良林)
+      - 🇻🇳 越南-322.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-21.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-533.0KB/s(Youtube:不良林)
-      - 波兰-802.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.08MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-522.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.80MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.30MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-554.0KB/s(Youtube:不良林)
+      - 🇻🇳 越南-322.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-21.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-533.0KB/s(Youtube:不良林)
-      - 波兰-802.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.08MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-522.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.80MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.30MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-554.0KB/s(Youtube:不良林)
+      - 🇻🇳 越南-322.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
