--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-2.80MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇷🇺 俄罗斯联邦-1.30MB/s(Youtube:不良林), server: 213.183.53.208, port: 9003, type: ss, cipher: aes-256-cfb, password: JdmRK9gMEqFgs8nP}
-  - {name: 🇸🇬 新加坡-2.81MB/s(Youtube:不良林), server: v2-2.godlight.xyz, port: 27000, type: vmess, uuid: 43308d27-94ec-408e-a8f6-d682cfb99ca9, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /54f634fs, ws-headers: {Host: v2-2.godlight.xyz}}
-  - {name: 🇺🇸 美国-554.0KB/s(Youtube:不良林), server: ahdaeph8.com, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: ahdaeph8.com}}
-  - {name: 🇻🇳 越南-322.3KB/s(Youtube:不良林), server: hn2.aqvpn.me, port: 443, type: trojan, password: d00083c7-e3db-4707-a24d-5662912368ff, sni: hn2.aqvpn.me, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-3.63MB/s(Youtube:不良林), server: 213.183.53.208, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 🇺🇸 美国-2.23MB/s(Youtube:不良林), server: wireless.starspace.link, port: 443, type: trojan, password: 5LN8SGTqxk336nFg, sni: wireless.starspace.link, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.67MB/s(Youtube:不良林), server: holidays.starspace.link, port: 443, type: trojan, password: XCPKaaV8I1rmb7Ai, sni: holidays.starspace.link, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-232.4KB/s(Youtube:不良林), server: jgw2.gaox.ml, port: 443, type: trojan, password: f2117e99-9b6e-47fd-b0a9-634a0b15b998, sni: jgw2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇻🇳 越南-2.48MB/s(Youtube:不良林), server: hcm2.aqvpn.me, port: 443, type: trojan, password: d00083c7-e3db-4707-a24d-5662912368ff, sni: hcm2.aqvpn.me, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.73MB/s(Youtube:不良林), server: 1.ezydfdd.com, port: 443, type: vmess, uuid: 4ee48ad8-178c-40a2-9c52-a14e90a06e49, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /nmsl, ws-headers: {Host: 1.ezydfdd.com}}
+  - {name: 🇺🇸 美国-11.42MB/s(Youtube:不良林), server: ocrb2.moonfree.top, port: 443, type: vmess, uuid: 6e9eeae6-c3d1-439e-9f7a-213fe09b2dbe, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: ocrb2.moonfree.top}}
+  - {name: 🇨🇳 中国-1.46MB/s(Youtube:不良林), server: gy.cwcsrsyby.xyz, port: 47515, type: vmess, uuid: 2a30f24e-c164-3f34-a99d-e9107655cf49, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-1.91MB/s(Youtube:不良林), server: snacks.starspace.link, port: 443, type: trojan, password: 0lbw6RXSl7eqCYMv, sni: snacks.starspace.link, skip-cert-verify: true}
   - {name: 🇺🇸 美国-3.17MB/s(Youtube:不良林), server: views.pickaxe.sh, port: 443, type: trojan, password: XQ5jxs58ecd403l7, sni: views.pickaxe.sh, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.82MB/s(Youtube:不良林), server: jgwcc2.gaox.ml, port: 443, type: trojan, password: 9c822f05-cfdc-479a-9534-60f3d4127435, sni: jgwcc2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-323.7KB/s(Youtube:不良林), server: 213.183.53.208, port: 9025, type: ss, cipher: aes-256-cfb, password: XPtzA9sCug3SPR4c}
+  - {name: 🇺🇸 美国-3.02MB/s(Youtube:不良林), server: v3.ssrsub.com, port: 443, type: vmess, uuid: 620d82a8-22ba-4945-90ba-a2bed1cde1d2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v3.ssrsub.com}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-2.80MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.30MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-554.0KB/s(Youtube:不良林)
-      - 🇻🇳 越南-322.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.67MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-232.4KB/s(Youtube:不良林)
+      - 🇻🇳 越南-2.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-11.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.46MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-323.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-2.80MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.30MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-554.0KB/s(Youtube:不良林)
-      - 🇻🇳 越南-322.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.67MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-232.4KB/s(Youtube:不良林)
+      - 🇻🇳 越南-2.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-11.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.46MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-323.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-2.80MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.30MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-554.0KB/s(Youtube:不良林)
-      - 🇻🇳 越南-322.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.67MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-232.4KB/s(Youtube:不良林)
+      - 🇻🇳 越南-2.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-11.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.46MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-323.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-2.80MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.30MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-554.0KB/s(Youtube:不良林)
-      - 🇻🇳 越南-322.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.67MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-232.4KB/s(Youtube:不良林)
+      - 🇻🇳 越南-2.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-11.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.46MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-323.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-2.80MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.30MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-554.0KB/s(Youtube:不良林)
-      - 🇻🇳 越南-322.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.67MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-232.4KB/s(Youtube:不良林)
+      - 🇻🇳 越南-2.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-11.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.46MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-323.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-2.80MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.30MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-554.0KB/s(Youtube:不良林)
-      - 🇻🇳 越南-322.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.67MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-232.4KB/s(Youtube:不良林)
+      - 🇻🇳 越南-2.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-11.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.46MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-323.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-2.80MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.30MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-554.0KB/s(Youtube:不良林)
-      - 🇻🇳 越南-322.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.67MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-232.4KB/s(Youtube:不良林)
+      - 🇻🇳 越南-2.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-11.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.46MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-323.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
